<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.rafasantos</groupId>
	<artifactId>difffilter</artifactId>
	<version>0.0.6-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>difffilter</name>
	<description>Check for differences between files and apply templates.</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>

		<org.springframework.spring-core.version>4.3.6.RELEASE</org.springframework.spring-core.version>
		<apache-commons-cli>1.3.1</apache-commons-cli>
		<org.fusesource.jansi.version>1.14</org.fusesource.jansi.version>
		<junit.version>4.13.1</junit.version>
	</properties>

	<dependencies>
		<!-- Apache Commons CLI -->
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>${apache-commons-cli}</version>
		</dependency>
		<!-- Endo of Apache Commons CLI -->
		
		<!-- Jansi -->
		<dependency>
		    <groupId>org.fusesource.jansi</groupId>
		    <artifactId>jansi</artifactId>
		    <version>1.14</version>
		</dependency>
		<!-- End of Jansi -->
		
		<!-- JUnit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<!-- Scope provided. It needs to be included on testing plugings (e.g.:maven-failsafe-plugin) -->
			<scope>provided</scope>
		</dependency>
		<!-- End of JUnit -->
	</dependencies>

	<build>
		<defaultGoal>package</defaultGoal>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>com.github.rafasantos.DiffFilterMain</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.17</version>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<!-- -Xverify:none may reduce startup time. No need to verify bitecode on the test phase -->
					<argLine>-Xverify:none</argLine>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>junit</groupId>
						<artifactId>junit</artifactId>
						<version>${junit.version}</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>
</project>
